--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
-                    <includes>**/*Test*.java</includes>
+                    <includes><include>**/*Test*.java</include></includes>
                 </configuration>
                 <executions>
                     <execution>
